- Bugfix: made request_uri() rewrite ( and ) with their entity equivalents to avoid XSS attacks!  Patch by Al, Moshe, Marco, Kjartan and me.
- Bugfix: the admin module does now import drupal.css prior to admin.css.
Patch by me.

- Bugfix: the admin module was still emitting a <base href=""> tag.  I
removed this as it is been taken care of by theme_head();  Patch by me.

- Bugfix: made the tracker module's pager only consider published pages.
Patch by Moshe.

- Bugfix: cured some typos in the comment module's help function.  Patch by
Marco.

- Bugfix: fixed a typo in the pager_display() that caused optional
attributes to be discarded.

- Bugfix: made the Xtemplate emit empty boxes like any other theme does.
Patch by Al.

- Bugfix: fixed broken link on the statistics module's log page.
Reported by Kjartan.

- CSS improvements: made the HTML output emitted by the tracker module
look nicer.  Patch by Moshe and Al.

- CSS improvements: added CSS classes for form elements.  Patch by Al.

- CSS improvements: added a vertical gap between the last form item and the
submit button.  Patch by Al.  Note that Opera 6 is not picking up this
CSS but apparently others browsers such as Konqueror do.

- Xtemplate improvements: changed the color of the selected day in the
archive module's calendar.  Patch by Al.

- Usability improvements: made the "birthday" field of the profile module
look nicer.  Patch by Al.

------

- TODO: it might be a good idea to emit the following meta tag in the
theme_head() function:

<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />

Currently, some themes (and modules!) emit this while others don't.  This
would also make it possible to change the charset site-wide.

- TODO: now we added support for td.dark and td.light to drupal.css, maybe
it can be removed from admin.css as well as xtemplate.css?

--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -6,6 +6,15 @@
 .item-list .icon a        { color: #000; text-decoration: none; }
 .item-list .icon a:hover  { color: #000; text-decoration: none; }
 
+tr.dark                   { background-color: #ddd; }
+tr.light                  { background-color: #eee; }
+
+#tracker table            { border-collapse: collapse; }
+#tracker th               { text-align: left; padding: 0.25em 1em; }
+#tracker td               { vertical-align: top; padding: 1em; }
+#tracker td ul            { margin-top: 0; margin-bottom: 0; }
+#tracker td ul a          { font-weight: normal; }
+
 .poll .bar                { height: 1em; }
 .poll .bar .foreground    { background-color: #000; float: left; height: 1em; }
 .poll .bar .background    { background-color: #ddd; float: left; height: 1em; }
